--- a/design/user-interface/drugs.html
+++ b/design/user-interface/drugs.html
@@ -51,7 +51,7 @@
       <div class="input-group">
         <input type="text-left" class="form-control" placeholder="Search for...">
         <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Go!</button>
+        <a href="drugs-detail.html" <button class="btn btn-default" type="button">Go!</a></button>
         </span> </div>
     </div>
   </div>
